--- a/archives/app/views/home/index.html.erb
+++ b/archives/app/views/home/index.html.erb
@@ -1,11 +1,22 @@
-<h1><a href="tales/new">Create a Tale</a></h1>
+<div id="content">
+	<div class="inner">
 
-<h1><a href="tales/show">Tales</a></h1>
+	
+		<article class="box post post-excerpt">
+			<header>
 
-<h1><a href="characters/new">Create a Character</a></h1>
+				<h2>Welcome to The Archives</h2>
+				<p>This is a collection of the most famous tales throughout history. Heroism, villainy, might, cowardice, all are important facets of a true legend.</p>
+			</header>
+							
+							
+				<p>
+					<h3>Rules</h3>
+				</p>
+							
+				<p>Stories cannot contain innappopriate imagery, writing, or anything of the sort. This is a site meant to be enjoyed by people of all ages. Good stories can be written without smut!</p>
 
-<h1><a href="characters/show">Character List</a></h1>
+		</article>
 
-<h1><a href="users/sign_in">Log In</a></h1>
-
-<h1><a href="users/sign_up">Sign Up</a></h1>
+	</div>
+</div>
