--- a/archives/app/views/users/show.html.erb
+++ b/archives/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<div id="page_content">
+
 <h1>User: <%=@User.email%></h1>
 
 <h1>Tales:</h1>
@@ -7,3 +9,5 @@
 	<img class="q" src='<%= t.cover %>'><br>
 
 <% end %>
+
+</div>
