--- a/archives/app/views/characters/new.html.erb
+++ b/archives/app/views/characters/new.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Create a New Character</h1>
 
 
@@ -26,7 +27,14 @@
       <%= f.label :biography%><br>
       <%= f.text_field :biography%>
     </p>
+
+    <p>
+      <%= f.label :picture%><br>
+      <%= f.file_field :picture%>
+    </p>
+
   <p>
     <%= f.submit %>
   </p>
 <% end %>
+
