--- a/archives/app/views/layouts/application.html.erb
+++ b/archives/app/views/layouts/application.html.erb
@@ -5,10 +5,52 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <%= stylesheet_link_tag    'main.css' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+
+		<!-- Sidebar -->
+			<div id="sidebar">
+
+				<!-- Logo -->
+					<h1 id="logo"><a href="#">The Archives</a></h1>
+
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="/">Home</a></li>
+							<li><a href="/tales">Tales</a></li>
+							<li><a href="/characters">Heroes/Villains</a></li>
+							<li><a href="/users">User</a></li>
+							<br>
+							<li><a href="/tales/new">Create a New Tale</a></li>
+							<li><a href="/characters/new">Create a New Character</a></li>
+						</ul>
+						<br>
+						<br>
+						<p><a href="users/sign_in">Log In</a></p>
+						<p><a href="users/sign_up">Sign Up</a></p>
+						<p><%= link_to('Logout', destroy_user_session_path, method: :delete, :class => 'links') %></p>
+					</nav>
+					</div>
+
+				
+
+		
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+
     <%= yield %>
   </body>
 </html>
