--- a/archives/app/views/tales/show.html.erb
+++ b/archives/app/views/tales/show.html.erb
@@ -1,13 +1,14 @@
-<h1>is this working</h1>
 
+<div id="page_content">
 
-<div>
+		<img src= '<%= @tale.cover %>'>
 
-	<%= @User.tale.each do |t|  %>
-		<ul>
-			<li><%= @tale.title %></li>
-		</ul>
+		<br>
 
-	<% end %>
+ 	   <h1><%= @tale.title %></h1>
+
+ 	   <br>
+
+ 	   <%= @tale.story%>
 
 </div>
