--- a/archives/app/views/layouts/application.html.erb
+++ b/archives/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
 						</ul>
 						<br>
 						<br>
-						<p><a href="users/sign_in">Log In</a></p>
-						<p><a href="users/sign_up">Sign Up</a></p>
+						<p><a href="../users/sign_in">Log In</a></p>
+						<p><a href="../users/sign_up">Sign Up</a></p>
 						<p><%= link_to('Logout', destroy_user_session_path, method: :delete, :class => 'links') %></p>
 					</nav>
 					</div>
