--- a/archives/app/views/home/index.html.erb
+++ b/archives/app/views/home/index.html.erb
@@ -16,6 +16,12 @@
 							
 				<p>Stories cannot contain innappopriate imagery, writing, or anything of the sort. This is a site meant to be enjoyed by people of all ages. Good stories can be written without smut!</p>
 
+				<h3>NOTE:</h3>
+
+				<p>
+					You cannot create any content unless you are logged in. If you do not have an account, please create one before trying to post any content so you do not lose any progress.
+				</p>
+
 		</article>
 
 	</div>
