--- a/archives/app/views/characters/show.html.erb
+++ b/archives/app/views/characters/show.html.erb
@@ -1,19 +1,20 @@
 <div id="page_content">
 
-<img src="<%= @characters.picture %>">
 
-<h1>Name: <%=@characters.name%></h1>
+<img src= '<%= @character.picture %>'>
 
-<h1>Gender: <%=@characters.gender%></h1>
+<h1>Name: <%=@character.name%></h1>
 
-<h1>Race: <%=@characters.race%></h1>
+<h1>Gender: <%=@character.gender%></h1>
 
-<h1>Alignment: <%=@characters.alignment%></h1>
+<h1>Race: <%=@character.race%></h1>
 
-<h1>Biography:</h1> 
-	
+<h1>Alignment: <%=@character.alignment%></h1>
+
+<h1>Biography:</h1>
+
 	<div id="biography">
-	<%=@characters.biography%>
+	<%=@character.biography%>
 	</div>
 
 </div>
